# mpan

./: CMakeLists.txt  README.md  mpan.yaml
conf/: categories.conf  categories.conf.in  diskdrake-dav.conf  diskdrake-fileshare.conf  diskdrake-nfs.conf  diskdrake-samba.conf  diskdrake.conf  dnfdragora-update.conf  dnfdragora.conf  drakconnect-del.conf  drakconnect.conf  drakgw.conf  drakkeyboard.conf  drakmouse.conf  draknetcenter.conf  draknetprofile.conf  draknfs.conf  draksambashare.conf  drakvpn.conf  drakx11.conf  drakxkeyboard.conf  harddrake.conf  isodumper.conf  manaadduser.conf  manaclock.conf  manadm.conf  manahost.conf  manalog.conf  manaproxy.conf  manaservice.conf  manaservice.conf.in  manauser.conf  manawall.conf  mpan.yaml
extras/: mpan.desktop.in
mpan/: configreader.py  mpan
po/: CMakeLists.txt  af.po  am.po  ar.po  ast.po  az.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  ky.po  lo.po  lt.po  lv.po  mk.po  mpan.pot  (+26 more)
po/.tx/: config
tools/: po-update.sh
